--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "joi": "^17.12.1"
+    "joi": "^17.12.1",
+    "mongoose": "^8.1.2",
+    "uuid": "^9.0.1"
   }
 }
