--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.16",
     "@types/uuid": "^9.0.8",
     "nodemon": "^3.0.3",
@@ -29,6 +30,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "joi": "^17.12.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
     "uuid": "^9.0.1"
   }
